6801625: CDS: HeapDump tests crash with internal error in compactingPermGenGen.cpp

Allow iteration over the shared spaces when using CDS, repealing previous proscription. Deferred further required CDS-related cleanups of perm gen to CR 6897789.

Reviewed-by: phh, jmasa